<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/Nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_irfan_maulana_s"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <TextView
        android:id="@+id/Nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim_6706184010"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Nama"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/Kelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kelas_d3if_42_04"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nama"
        app:layout_constraintTop_toTopOf="@+id/Nim"
        app:layout_constraintVertical_bias="0.172" />
</androidx.constraintlayout.widget.ConstraintLayout>